@@ -1,3 +1,10 @@
+2007-12-09  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* mail/hashcash.el, net/imap.el, pgg.el, pgg-parse.el
+	(declare-function): Add new no-op macro for backward compatibility.
+
+	* net/imap.el (imap-string-to-integer): New function.
+
 2007-12-09  David Kastrup  <dak@gnu.org>
 
 	* emacs-lisp/lisp-mnt.el (lm-verify): Make it work with
